# food-recs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: train.yaml
configs/data/: default.yaml
configs/logging/: default.yaml
configs/model/: default.yaml
data/: orders_with_status.csv.dvc  products.csv.dvc
food_recs/: __init__.py  app.py  commands.py  data.py  inference.py  lgbm_ensemble.py  models.py  sentence_transformer_model.py  training.py  visualization.py
food_recs/evaluation/: debiased_metrics.py
food_recs/features/: __init__.py  item_features.py  user_features.py
scripts/: analyze_cache_metrics.py
tests/: test_data.py  test_models.py  test_new_models.py  test_training.py  test_visualization.py
